--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #2a932a;
         }
         .heading{
-            background-color: greenyellow;
+            background-color: #28308e99;
             width: 80%;
             margin: auto;
             text-align: center;
@@ -31,7 +31,7 @@
         #btn{
             padding: 1rem;
             border-radius: 0.6rem;
-            width: 10%;
+            width: auto;
             background: greenyellow;
             font-size: 1rem;
             font-weight: bold;
@@ -52,7 +52,7 @@
             text-align: center;
             width: 80%;
             margin: auto;
-            background-color: greenyellow;
+            background-color: #28308e99;
             padding: 1rem;
         }
     </style>
