--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         body{
             margin: 0;
             font-family: "Montserrat", sans-serif;
-            background-color: #2a932a;
+            background-color: #565a79;
         }
         .heading{
             background-color: #28308e99;
