--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             padding: 1rem;
             border-radius: 0.6rem;
             width: auto;
-            background: greenyellow;
+            background: #ccccd4;
             font-size: 1rem;
             font-weight: bold;
             display: block;
